full structure with placeholders and jumbotron

--- a/index.html
+++ b/index.html
@@ -10,50 +10,64 @@
 
 <body>
 
-    <head>
-        <div class="banner"></div>
+    <header>
+        <div class="banner">
+            <img id="lama-icon" src="assets/img/ollama_icon.png" width="30" alt="lama icon">
+            <!-- /#lama-icon -->
+            <div id="menu-icon">&equiv;</div>
+            <!-- /#menu-icon -->
+        </div>
         <!-- /.banner -->
-    </head>
+    </header>
     <main>
-        <div class="jumbotron"></div>
-        <!-- /.jumbotron -->
+        <div id="jumbotron">
+            <h1>What will you build?</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic, aspernatur.</p>
+            <a class="link-button" href="http://">link</a>
+            <!-- /.link-button -->
+            <img id="lama-cooking" src="assets/img/ollama_cooking.png" alt="lama cooking">
+            <!-- /#lama-cooking -->
+        </div>
+        <!-- /#jumbotron -->
         <section class="lists">
-            <ul class="list">
-                <li class="list-element"></li>
+            <h2 class="section-title">Ollama works with your favorite tools</h2>
+            <!-- /.section-title -->
+            <ul class="list">elenco
+                <li class="list-element">elemento</li>
                 <!-- /.list-element -->
-                <li class="list-element"></li>
+                <li class="list-element">elemento</li>
                 <!-- /.list-element -->
-                <li class="list-element"></li>
-                <!-- /.list-element -->
-            </ul>
-            <!-- /.list -->
-            <ul class="list">
-                <li class="list-element"></li>
-                <!-- /.list-element -->
-                <li class="list-element"></li>
-                <!-- /.list-element -->
-                <li class="list-element"></li>
+                <li class="list-element">elemento</li>
                 <!-- /.list-element -->
             </ul>
             <!-- /.list -->
-            <ul class="list">
-                <li class="list-element"></li>
+            <ul class="list">elenco
+                <li class="list-element">elemento</li>
                 <!-- /.list-element -->
-                <li class="list-element"></li>
+                <li class="list-element">elemento</li>
                 <!-- /.list-element -->
-                <li class="list-element"></li>
+                <li class="list-element">elemento</li>
+                <!-- /.list-element -->
+            </ul>
+            <!-- /.list -->
+            <ul class="list">elenco
+                <li class="list-element">elemento</li>
+                <!-- /.list-element -->
+                <li class="list-element">elemento</li>
+                <!-- /.list-element -->
+                <li class="list-element">elemento</li>
                 <!-- /.list-element -->
             </ul>
             <!-- /.list -->
         </section>
         <!-- /.lists -->
         <div class="cta">
-            <ul class="cta-list">
-                <li class="cta-list-element"></li>
+            <ul class="cta-list">sign
+                <li class="cta-list-element">elemento</li>
                 <!-- /.cta-list-element -->
-                <li class="cta-list-element"></li>
+                <li class="cta-list-element">elemento</li>
                 <!-- /.cta-list-element -->
-                <li class="cta-list-element"></li>
+                <li class="cta-list-element">elemento</li>
                 <!-- /.cta-list-element -->
             </ul>
             <!-- /.cta-list -->
