--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -23,39 +24,39 @@
         <div id="jumbotron">
             <h1>What will you build?</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic, aspernatur.</p>
-            <a class="link-button" href="http://">link</a>
+            <a class="link-button" href="http://">Explore &RightArrow;</a>
             <!-- /.link-button -->
             <img id="lama-cooking" src="assets/img/ollama_cooking.png" alt="lama cooking">
             <!-- /#lama-cooking -->
         </div>
         <!-- /#jumbotron -->
-        <section class="lists">
+        <section id="lists">
             <h2 class="section-title">Ollama works with your favorite tools</h2>
             <!-- /.section-title -->
-            <ul class="list">elenco
-                <li class="list-element">elemento</li>
+            <ul class="list">Coding
+                <li class="list-element"><i class="bi bi-openai"></i>Codex</li>
                 <!-- /.list-element -->
-                <li class="list-element">elemento</li>
+                <li class="list-element"><i class="bi bi-claude"></i>Claude Code</li>
                 <!-- /.list-element -->
-                <li class="list-element">elemento</li>
-                <!-- /.list-element -->
-            </ul>
-            <!-- /.list -->
-            <ul class="list">elenco
-                <li class="list-element">elemento</li>
-                <!-- /.list-element -->
-                <li class="list-element">elemento</li>
-                <!-- /.list-element -->
-                <li class="list-element">elemento</li>
+                <li class="list-element"><i class="bi bi-file-code"></i>OpenCode</li>
                 <!-- /.list-element -->
             </ul>
             <!-- /.list -->
-            <ul class="list">elenco
-                <li class="list-element">elemento</li>
+            <ul class="list">Coding
+                <li class="list-element"><i class="bi bi-openai"></i>Codex</li>
                 <!-- /.list-element -->
-                <li class="list-element">elemento</li>
+                <li class="list-element"><i class="bi bi-claude"></i>Claude Code</li>
                 <!-- /.list-element -->
-                <li class="list-element">elemento</li>
+                <li class="list-element"><i class="bi bi-file-code"></i>OpenCode</li>
+                <!-- /.list-element -->
+            </ul>
+            <!-- /.list -->
+            <ul class="list">Coding
+                <li class="list-element"><i class="bi bi-openai"></i>Codex</li>
+                <!-- /.list-element -->
+                <li class="list-element"><i class="bi bi-claude"></i>Claude Code</li>
+                <!-- /.list-element -->
+                <li class="list-element"><i class="bi bi-file-code"></i>OpenCode</li>
                 <!-- /.list-element -->
             </ul>
             <!-- /.list -->
