--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="jumbotron">
             <h1>What will you build?</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic, aspernatur.</p>
-            <a class="link-button" href="http://">Explore &RightArrow;</a>
+            <a id="explore-button" class="button" href="http://">Explore &RightArrow;</a>
             <!-- /.link-button -->
             <img id="lama-cooking" src="assets/img/ollama_cooking.png" alt="lama cooking">
             <!-- /#lama-cooking -->
@@ -60,20 +60,25 @@
                 <!-- /.list-element -->
             </ul>
             <!-- /.list -->
+            <a id="view-more" href="http://">View all &rightarrow;</a>
         </section>
         <!-- /.lists -->
-        <div class="cta">
-            <ul class="cta-list">sign
-                <li class="cta-list-element">elemento</li>
+        <section id="cta">   
+               <h3 id="cta-title">Sign up for an account</h3>
+                <!-- /#cta-title --> 
+            <ul class="cta-list">
+                <li class="cta-list-element">Receive updates when new models are released</li>
                 <!-- /.cta-list-element -->
-                <li class="cta-list-element">elemento</li>
+                <li class="cta-list-element">Access cloud hardware to run faster, larger models</li>
                 <!-- /.cta-list-element -->
-                <li class="cta-list-element">elemento</li>
+                <li class="cta-list-element">Customize & share models with others</li>
                 <!-- /.cta-list-element -->
             </ul>
             <!-- /.cta-list -->
-        </div>
-        <!-- /.cta -->
+            <a id="create-button" class="button" href="http://">Create account</a>
+            <!-- /#create-button -->
+        </section>
+        <!-- /#cta -->
     </main>
     <footer>
         <a href="http://" class="social-link"></a>
