--- a/index.html
+++ b/index.html
@@ -81,13 +81,18 @@
         <!-- /#cta -->
     </main>
     <footer>
-        <a href="http://" class="social-link"></a>
-        <a href="http://" class="social-link"></a>
-        <a href="http://" class="social-link"></a>
-        <a href="http://" class="social-link"></a>
-        <a href="http://" class="social-link"></a>
-        <a href="http://" class="social-link"></a>
-        <a href="http://" class="social-link"></a>
+        <div class="social-link-group"> 
+        <a href="http://" class="social-link">Blog</a>
+        <a href="http://" class="social-link">Download</a>
+        <a href="http://" class="social-link">Docs</a>
+        </div>
+        <div class="social-link-group"> 
+        <a href="http://" class="social-link">GitHub</a>
+        <a href="http://" class="social-link">Discord</a>
+        <a href="http://" class="social-link">X (Twitter)</a>
+        <a href="http://" class="social-link">Meetups</a>
+        </div>
+        <!-- /.social-link -->
         <p id="copyright">&copy 2026 Ollama Inc</p>
     </footer>
 </body>
