fix ul for w3c validation

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="jumbotron">
             <h1>What will you build?</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic, aspernatur.</p>
-            <a id="explore-button" class="button" href="http://">Explore &RightArrow;</a>
+            <a id="explore-button" class="button" href="#">Explore &RightArrow;</a>
             <!-- /.link-button -->
             <img id="lama-cooking" src="assets/img/ollama_cooking.png" alt="lama cooking">
             <!-- /#lama-cooking -->
@@ -33,7 +33,8 @@
         <section id="lists">
             <h2 class="section-title">Ollama works with your favorite tools</h2>
             <!-- /.section-title -->
-            <ul class="list">Coding
+            <p>Coding</p>
+            <ul class="list">
                 <li class="list-element"><i class="bi bi-openai"></i>Codex</li>
                 <!-- /.list-element -->
                 <li class="list-element"><i class="bi bi-claude"></i>Claude Code</li>
@@ -42,7 +43,8 @@
                 <!-- /.list-element -->
             </ul>
             <!-- /.list -->
-            <ul class="list">Coding
+            <p>Coding</p>
+            <ul class="list">
                 <li class="list-element"><i class="bi bi-openai"></i>Codex</li>
                 <!-- /.list-element -->
                 <li class="list-element"><i class="bi bi-claude"></i>Claude Code</li>
@@ -51,7 +53,8 @@
                 <!-- /.list-element -->
             </ul>
             <!-- /.list -->
-            <ul class="list">Coding
+            <p>Coding</p>
+            <ul class="list">
                 <li class="list-element"><i class="bi bi-openai"></i>Codex</li>
                 <!-- /.list-element -->
                 <li class="list-element"><i class="bi bi-claude"></i>Claude Code</li>
@@ -60,12 +63,12 @@
                 <!-- /.list-element -->
             </ul>
             <!-- /.list -->
-            <a id="view-more" href="http://">View all &rightarrow;</a>
+            <a id="view-more" href="#">View all &rightarrow;</a>
         </section>
         <!-- /.lists -->
-        <section id="cta">   
-               <h3 id="cta-title">Sign up for an account</h3>
-                <!-- /#cta-title --> 
+        <section id="cta">
+            <h3 id="cta-title">Sign up for an account</h3>
+            <!-- /#cta-title -->
             <ul class="cta-list">
                 <li class="cta-list-element">Receive updates when new models are released</li>
                 <!-- /.cta-list-element -->
@@ -75,25 +78,25 @@
                 <!-- /.cta-list-element -->
             </ul>
             <!-- /.cta-list -->
-            <a id="create-button" class="button" href="http://">Create account</a>
+            <a id="create-button" class="button" href="#">Create account</a>
             <!-- /#create-button -->
         </section>
         <!-- /#cta -->
     </main>
     <footer>
-        <div class="social-link-group"> 
-        <a href="http://" class="social-link">Blog</a>
-        <a href="http://" class="social-link">Download</a>
-        <a href="http://" class="social-link">Docs</a>
+        <div class="social-link-group">
+            <a href="#" class="social-link">Blog</a>
+            <a href="#" class="social-link">Download</a>
+            <a href="#" class="social-link">Docs</a>
         </div>
-        <div class="social-link-group"> 
-        <a href="http://" class="social-link">GitHub</a>
-        <a href="http://" class="social-link">Discord</a>
-        <a href="http://" class="social-link">X (Twitter)</a>
-        <a href="http://" class="social-link">Meetups</a>
+        <div class="social-link-group">
+            <a href="#" class="social-link">GitHub</a>
+            <a href="#" class="social-link">Discord</a>
+            <a href="#" class="social-link">X (Twitter)</a>
+            <a href="#" class="social-link">Meetups</a>
         </div>
         <!-- /.social-link -->
-        <p id="copyright">&copy 2026 Ollama Inc</p>
+        <p id="copyright">&copy; 2026 Ollama Inc</p>
     </footer>
 </body>
 
